--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": true,
+    "noImplicitAny" : false, // needed because widgetAPI.ts rises an error : typescript assertion signatures
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
